examples/test/testpolicy13184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13184
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key33: value13
      key10: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value35
          key42: value36
      podSelector:
        matchLabels:
          key19: value22
          key34: value17
